--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
 html {
   -ms-text-size-adjust: 100%;
- 
   -webkit-text-size-adjust: 100%;
   height: 100%;
   width: 100%
- }
+}
 
 /**
  * Remove default margin.
@@ -12,7 +11,8 @@ html {
 body {
   margin: 0; 
   height: 100%;
-  width: 100%}
+  width: 100%
+}
 
 #root{
   height: 100%;
