--- a/src/Products/ProductTile/ProductTile.css
+++ b/src/Products/ProductTile/ProductTile.css
@@ -1,4 +1,21 @@
 .ProductTileController{
 height: 81%;
 width: 100%;
+display: inline-flex;
 }
+
+.ProductTileController img{
+    border: 1px solid #ccc;
+}
+
+.product-description{
+    border-top: 1px solid rgb(20, 20, 20);
+}
+
+
+.product{
+    border: 1px solid rgb(43, 42, 42);
+    height: 34%;
+    background: transparent;
+}
+
