--- a/src/components/Products/ProductTile/ProductTile.scss
+++ b/src/components/Products/ProductTile/ProductTile.scss
@@ -1,12 +1,15 @@
 .product{
     border: 1px solid rgb(43, 42, 42);
-    height: 34%;
     background: transparent;
-
+    margin-left: 4vw;
+    margin-top: 3.3vh;
+    height: min-content;
+    max-height: 40vh;
     .product-description{
         border-top: 1px solid rgb(20, 20, 20);
+        padding: 2px;
     }
-    
+
     img{
         border: 1px solid #ccc;
     }
