--- a/src/components/Products/ProductDashBoard/ProductDashBoard.scss
+++ b/src/components/Products/ProductDashBoard/ProductDashBoard.scss
@@ -8,6 +8,7 @@
     background-color: #666;
     flex: 0 0 50px;
   }
+  
   .product-tile-container{
     flex: 1 1 auto;
     display: flex;
@@ -18,6 +19,29 @@
     //justify-content: center;
     width: 90%;
   }
+
+  .pagination {
+    li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 8px 16px;
+    background: #797171;
+    margin: 5px;
+    height: 18px;
+      a{
+       text-decoration: none;
+        color: unset;
+       }
+    }
+   .active{
+        background: #484e4e;
+    }
+    .disabled{
+      background: #b7b0b0;
+    }
+       
+  }
+
   footer {
     background-color: #777;
     flex: 0 0 50px;
