Review comment incorporated.

--- a/src/components/products/productTile/productTile.scss
+++ b/src/components/products/productTile/productTile.scss
@@ -5,11 +5,8 @@
    margin: 1% 0 0% 1%;
    box-shadow: 3px 3px 5px #aaaaaa;
    .card-img-top{
-    margin-top: 10px;
-    margin-right: 10px;
-    width: 79px;
-    height: 104px;
-    margin-bottom: 10px;
+    width: 4rem;
+    margin: 10px 10px 10px 0px;
     background-color: black;
     }
   }
